modules/wycs/tests/valid/test_type_03.wyal
type nat is (int x) where:
    x >= 0

assert:
    forall(nat x, nat y):
        x + y >= 0