modules/wycs/tests/invalid/test_003.wyal
assert:
 forall(int x, int y):
   (x+1 == y) ==> (x == y+1)

